# mcp_tutorial

./: .env  README.md  build_mcp_servers.sh  client.ipynb  pyproject.toml  requirements.txt
mcp_client/: main.py
mcp_servers/arxiv_server/: Dockerfile  docker-compose.yaml  main.py  requirements.txt
mcp_servers/arxiv_server/tools/: __init__.py  paper_retrieval.py
mcp_servers/math_server/: docker-compose.yaml  main.py  requirements.txt
mcp_servers/math_server/prompts/: __init__.py  prompts.py
mcp_servers/math_server/resources/: resources.py
mcp_servers/math_server/tools/: math.py
mcp_servers/wikipedia_server/: docker-compose.yaml  main.py  requirements.txt
mcp_servers/wikipedia_server/tools/: __init__.py  wiki.py
