[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "langchain-google-genai==2.1.2",
    "langgraph==0.3.22",
    "mcp[cli]==1.6.0",
    "pydantic==2.11.1",
    "python-dotenv==1.1.0",
]
